opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/virtual_dom"
bug-reports: "https://github.com/janestreet/virtual_dom/issues"
dev-repo: "git+https://github.com/janestreet/virtual_dom.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "--only-packages" "virtual_dom" "--root" "." "-j" jobs "@install"]
]
depends: [
  "async_js"
  "base"
  "jbuilder"                {build & >= "1.0+beta8"}
  "ppx_driver"
  "ppx_jane"
  "js_of_ocaml"             {>= "2.8.4" & < "3.0"}
  "ocaml-migrate-parsetree" {>= "0.4"}
  "tyxml"
]
available: [ ocaml-version >= "4.03.0" ]
descr: "
OCaml bindings for the virtual-dom library

The library itself may be found at
https://github.com/Matt-Esch/virtual-dom.
"
