opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/virtual_dom"
bug-reports: "https://github.com/janestreet/virtual_dom/issues"
dev-repo: "git+https://github.com/janestreet/virtual_dom.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "base"
  "ppx_jane"
  "jbuilder"                {build & >= "1.0+beta18.1"}
  "js_of_ocaml"             {>= "3.0"}
  "js_of_ocaml-ppx"
  "ocaml-migrate-parsetree" {>= "1.0"}
  "ppxlib"                  {>= "0.1.0"}
  "tyxml"
]
available: [ ocaml-version >= "4.06.1" ]
descr: "
OCaml bindings for the virtual-dom library

The library itself may be found at
https://github.com/Matt-Esch/virtual-dom.
"
