opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/virtual_dom"
bug-reports: "https://github.com/janestreet/virtual_dom/issues"
dev-repo: "git+https://github.com/janestreet/virtual_dom.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/virtual_dom/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "async_kernel"
  "base"
  "core"
  "core_kernel"
  "ppx_jane"
  "sexplib"
  "stdio"
  "base64"          {>= "3.4.0"}
  "dune"            {>= "3.17.0"}
  "gen_js_api"      {= "1.1.2+ox"}
  "js_of_ocaml"     {= "6.0.1+ox"}
  "js_of_ocaml-ppx" {= "6.0.1+ox"}
  "lambdasoup"      {>= "0.6.3"}
  "tyxml"           {>= "4.3.0"}
  "uri"             {>= "3.0.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "OCaml bindings for the virtual-dom library"
description: "
The library itself may be found at
https://github.com/Matt-Esch/virtual-dom.
"
