(library
 (name virtual_dom)
 (public_name virtual_dom)
 (preprocess
  (pps js_of_ocaml-ppx ppx_jane))
 (js_of_ocaml
  (javascript_files ../lib/virtualdom.compiled.pretty.js ./thunk.js
    ./hooks.js))
 (libraries ui_effect js_of_ocaml css_gen core sexplib jsoo_weak_collections)
 (wasm_of_ocaml
  (javascript_files ../lib/virtualdom.compiled.pretty.js ./thunk.js
    ./hooks.js)))
