(library
 (name virtual_dom_test_jsdom)
 (preprocess
  (pps js_of_ocaml-ppx ppx_jane ppx_html ppx_tailwind))
 (libraries core js_of_ocaml expect_test_helpers_core bonsai_web_test.jsdom
   virtual_dom virtual_dom_test_helpers css_gen
   expect_test_helpers_core.expect_test_helpers_base
   patdiff.expect_test_patdiff ui_effect))
